# cinelerra-hv

./: .gitignore  Makefile  Makefile.am  cinelerra-hv_0.0.beta1.orig.tar.bz2.delta  cinelerra-hv_0.0.beta1.orig.tar.bz2.id  cinelerra-hv_0.0.beta2.orig.tar.bz2.delta  cinelerra-hv_0.0.beta2.orig.tar.bz2.id  cinelerra-hv_1.0.0.orig.tar.bz2.delta  cinelerra-hv_1.0.0.orig.tar.bz2.id  cinelerra-hv_1.1.0.orig.tar.bz2.delta  cinelerra-hv_1.1.0.orig.tar.bz2.id  cinelerra-hv_1.1.5.orig.tar.bz2.delta  cinelerra-hv_1.1.5.orig.tar.bz2.id  cinelerra-hv_1.1.6.orig.tar.bz2.delta  cinelerra-hv_1.1.6.orig.tar.bz2.id  cinelerra-hv_1.1.7.orig.tar.bz2.delta  cinelerra-hv_1.1.7.orig.tar.bz2.id  cinelerra-hv_1.1.8.orig.tar.bz2.delta  cinelerra-hv_1.1.8.orig.tar.bz2.id  cinelerra-hv_1.1.9.orig.tar.bz2.delta  cinelerra-hv_1.1.9.orig.tar.bz2.id  cinelerra-hv_1.2.0.orig.tar.bz2.delta  cinelerra-hv_1.2.0.orig.tar.bz2.id  cinelerra-hv_1.2.1.orig.tar.bz2.delta  cinelerra-hv_1.2.1.orig.tar.bz2.id  cinelerra-hv_1.2.2.orig.tar.bz2.delta  cinelerra-hv_1.2.2.orig.tar.bz2.id  cinelerra-hv_2.0.orig.tar.bz2.delta  cinelerra-hv_2.0.orig.tar.bz2.id  cinelerra-hv_2.1.orig.tar.bz2.delta  cinelerra-hv_2.1.orig.tar.bz2.id  cinelerra-hv_4.1.orig.tar.bz2.delta  cinelerra-hv_4.1.orig.tar.bz2.id  cinelerra-hv_4.2.orig.tar.bz2.delta  cinelerra-hv_4.2.orig.tar.bz2.id  cinelerra-hv_4.3.orig.tar.bz2.delta  cinelerra-hv_4.3.orig.tar.bz2.id  cinelerra-hv_4.4.orig.tar.xz.delta  cinelerra-hv_4.4.orig.tar.xz.id  cinelerra-hv_4.5.orig.tar.xz.delta  (+11 more)
cinelerra/data/: Makefile.am
plugins/: Makefile  Makefile.am
plugins/1080to480/: 1080to480.C  1080to480.h
plugins/1080to540/: 1080to540.C  1080to540.h
plugins/720to480/: 720to480.C
plugins/C41-master/: Makefile.am
plugins/CVS/: Entries  Repository
plugins/aging/: Makefile  Makefile.am  aging.C  aging.h  agingwindow.C  agingwindow.h
plugins/audioscope/: Makefile.am  audioscope.C.bak  audioscope.h.bak
plugins/bandslide/: bandslide.C  bandslide.h
plugins/bandwipe/: bandwipe.C  bandwipe.h
plugins/blur/: blur.C  blur.h  blurwindow.C  blurwindow.h
plugins/blurzoom/: blurzoom.C  blurzoom.h
plugins/brightness/: Makefile  Makefile.am  brightness.C  brightness.h  brightnesswindow.C  brightnesswindow.h
plugins/brighttheme/: Makefile.am  brighttheme.C
plugins/burn/: Makefile  Makefile.am  burn.C  burn.h  burn.h.rej  burnwindow.C  burnwindow.h
plugins/cdripper/: cdripper.C  cdripper.h
plugins/chromakey/: Makefile  Makefile.am  chromakey.C  chromakey.C.bak  chromakey.h
plugins/chromakeyhsv/: Makefile  Makefile.am  chromakey.C  chromakey.h
plugins/color3way/: Makefile.am
plugins/colorbalance/: Makefile  Makefile.am  colorbalance.C  colorbalance.C.orig  colorbalance.h  colorbalancewindow.C  colorbalancewindow.h
plugins/colorbalance.bak/: colorbalance.C  colorbalance.h  colorbalancewindow.C  colorbalancewindow.h
plugins/colors/: colorpicker.C  colorpicker.h  plugincolors.C  plugincolors.h  ~plugincolors.h
plugins/compressor/: compressor.C  compressor.C.bak  compressor.C.bak2  compressor.C.bak3  compressor.h
plugins/crossfade/: crossfade.C  crossfade.h
plugins/dcoffset/: Makefile.am
plugins/decimate/: decimate.C  decimate.C.bak  decimate.C.orig
plugins/defaulttheme/: .#mwindow.xcf.bz2.1.1  Makefile  defaulttheme.C  defaulttheme.C.bak  defaulttheme.C.rej  defaulttheme.h
plugins/deinterlace/: deinterlace.C  deinterlace.C.1  deinterlace.C.bak  deinterlace.h  deinterlace.h.1  deinterlace.h.bak  deinterwindow.C  deinterwindow.C.bak  deinterwindow.h  deinterwindow.h.bak
plugins/delayaudio/: delayaudio.C  delayaudio.h
plugins/delayvideo/: delayvideo.C  delayvideo.h
plugins/denoise/: denoise.C  denoise.h
plugins/denoisefft/: Makefile  Makefile.am  denoisefft.C  denoisefft.C.bak
plugins/denoisemjpeg/: denoisemjpeg.C
plugins/denoiseseltempavg/: seltempavg.C  seltempavg.h
plugins/denoisevideo/: denoisevideo.C  denoisevideo.h
plugins/despike/: despike.C  despike.h  despikewindow.C  despikewindow.h
plugins/diffkey/: Makefile.am  Makefile.orig  diffkey.C  diffkey.C.bak
plugins/diffkey.bak/: diffkey.C
plugins/dissolve/: dissolve.C  dissolve.C.bak  dissolve.C.orig  dissolve.h
plugins/dot/: Makefile  Makefile.am  dot.C  dot.h  dotwindow.C  dotwindow.h
plugins/downsample/: Makefile  Makefile.am  downsample.C  downsampleengine.C
plugins/fieldframe/: fieldframe.C
plugins/findobject/: Makefile.am  findobject.C
plugins/flip/: Makefile  flip.C  flip.h  flipwindow.C  flipwindow.h
plugins/fonts/: Makefile.am
plugins/framefield/: framefield.C  framefield.C.bak  framefield.C.bak2
plugins/freeverb/: Makefile  freeverb.C
plugins/freezeframe/: Makefile  freezeframe.C  freezeframe.h
plugins/gain/: gain.C  gain.h  gainwindow.C  gainwindow.h
plugins/gamma/: Makefile  Makefile.am  gamma.C  gamma.h
plugins/gradient/: Makefile  Makefile.am  gradient.C  gradient.h
plugins/graphic/: Makefile  graphic.C  graphic.h
plugins/histogram/: Makefile.am  histogram.C  histogram.C.bak  histogram.h  histogramconfig.C  histogramwindow.C
plugins/histogram.bak/: histogram.C  histogram.C.orig  histogram.h  histogram.inc  histogramconfig.C  histogramconfig.h  histogramwindow.C  histogramwindow.h
plugins/histogram_bezier/: histogram.C  histogram.h
plugins/holo/: Makefile  Makefile.am  holo.C  holo.h
plugins/huesaturation/: Makefile  Makefile.am  huesaturation.C  huesaturation.h
plugins/i686/: c_flags
plugins/interpolate/: interpolate.C  interpolate.h
plugins/interpolateall/: Makefile  interpolateall.C.orig
plugins/interpolateaudio/: interpolateaudio.C.bak
plugins/interpolatevideo/: Makefile  Makefile.am  interpolatevideo.C
plugins/invertaudio/: invert.C
plugins/invertvideo/: Makefile.am  invert.C
plugins/irissquare/: irissquare.C  irissquare.h
plugins/ivtc/: ivtc.C  ivtc.C.3  ivtc.C.orig  ivtc.h  ivtc.h.3  ivtcwindow.C.2
plugins/lame/: DEFINES  Makefile  Makefile.am  Makefile.am.global  config.cache  config.h  config.status  lame.spec  libtool  mkinstalldirs
plugins/lens/: Makefile.am  lens.C  lens.h
plugins/level/: leveleffect.C  (+1 more)
(+4366 files in other folders)
