THEMES= \
	suv

SUBDIRS= \
	$(THEMES) \
	1080to540 \
	720to480 \
	audioscope \
	aging \
	bandslide \
	bandwipe \
	blur \
	brightness \
	burn \
	cdripper \
	chromakey \
	chromakeyhsv \
	color3way \
	colorbalance \
	compressor \
	crossfade \
	decimate \
	deinterlace \
	delayaudio \
	delayvideo \
	denoise \
	denoiseseltempavg \
	denoisevideo \
	despike \
	diffkey \
	dissolve \
	dot \
	downsample \
	fieldframe \
	flash \
	flip \
	framefield \
	freeverb \
	freezeframe \
	gain \
	gamma \
	gradient \
	histogram \
	holo \
	huesaturation \
	interpolate \
	interpolateaudio \
	interpolatevideo \
	invertaudio \
	invertvideo \
	irissquare \
	ivtc \
	level \
	linearblur \
	liveaudio \
	livevideo \
	loopaudio \
	loopvideo \
	motion \
	motionblur \
	normalize \
	oilpainting \
	overlay \
	overlayaudio \
	parametric \
	perspective \
	pitch \
	polar \
	radialblur \
	reframe \
	reframert \
	resample \
	reverb \
	reverseaudio \
	reversevideo \
	rgb601 \
	rotate \
	scale \
	shapewipe \
	sharpen \
	shiftinterlace \
	slide \
	spectrogram \
	swapchannels \
	synthesizer \
	threshold \
	timeavg \
	timefront \
	timestretch \
	titler \
	translate \
	unsharp \
	videoscope \
	wave \
	whirl \
	wipe \
	yuv \
	zoomblur \
	dcoffset \
	lens \
	motion2point \
	photoscale \
	removegaps \
	resamplert \
	swapframes \
	timestretchrt \
	vocoder \
	zoom \
	fonts

# Code needing OpenCV
OPENCV_PLUGIN = \
	findobject

# plugin code that seem to be broken
BROKEN_PLUGIN = \
	dbx \
	piano

AUTOMAKE_OPTIONS=foreign

EXTRA_DIST = 
