LIBTOOL = $(SHELL) $(top_builddir)/libtool $(LTCXX_FLAGS)
EXTRA_DIST = $(fonts_DATA)

# automake can't handle files with space and single quotes, avoid those fonts.
# fonts_DATA = fonts.dir $(srcdir)/*.ttf
fonts_DATA = \
	fonts.dir \
	AltamonteNF.ttf \
	Quatl.ttf \
	Rafika.ttf \
	Re-buried.ttf \
	Rebecca.ttf \
	Regulators.ttf \
	Scriptina.ttf \
	Scythe.ttf \
	Sea-Dog.ttf \
	TANTOR.ttf \
	Tafelschrift.ttf \
	Tapeworm.ttf \
	Telegraphic.ttf \
	Vera.ttf \
	VeraBI.ttf \
	VeraBd.ttf \
	VeraIt.ttf \
	VeraMoBI.ttf \
	VeraMoBd.ttf \
	VeraMoIt.ttf \
	VeraMono.ttf \
	VeraSe.ttf \
	VeraSeBd.ttf \
	arial.ttf \
	arialbd.ttf \
	arialbi.ttf \
	ariali.ttf \
	ariblk.ttf \
	comic.ttf \
	comicbd.ttf \
	cour.ttf \
	courbd.ttf \
	courbi.ttf \
	couri.ttf \
	georgia.ttf \
	georgiab.ttf \
	georgiai.ttf \
	georgiaz.ttf \
	impact.ttf \
	l_10646.ttf \
	lucon.ttf \
	micross.ttf \
	old_engl.ttf \
	pala.ttf \
	palab.ttf \
	palabi.ttf \
	palai.ttf \
	symbol.ttf \
	tahoma.ttf \
	tahomabd.ttf \
	times.ttf \
	timesbd.ttf \
	timesbi.ttf \
	timesi.ttf \
	trebuc.ttf \
	trebucbd.ttf \
	trebucbi.ttf \
	trebucit.ttf \
	verdana.ttf \
	verdanab.ttf \
	verdanai.ttf \
	verdanaz.ttf \
	webdings.ttf \
	wingding.ttf
