noinst_LIBRARIES = libimagedata.a
libimagedata_a_SOURCES =
libimagedata_a_LIBADD = brighttheme.$(OBJEXT)

brighttheme.$(OBJEXT): $(PNGS)
	$(top_builddir)/guicast/bootstrap $@ $^ || { rm -f $@; exit 1; }

clean-local:
	rm -f brighttheme.$(OBJEXT) brighttheme

PNGS = \
	about_bg.png \
	about.png \
	aeffect_icon.png \
	antenna.png \
	arrow.png \
	atransition_icon.png \
	autokeyframe.png \
	bar.png \
	bigbutton_dn.png \
	bigbutton_hi.png \
	bigbutton_up.png \
	bottom_justify.png \
	bright_checkbox_checkedhi.png \
	bright_checkbox_checked.png \
	bright_checkbox_dn.png \
	bright_checkbox_hi.png \
	bright_checkbox_up.png \
	bright_hscroll_handle_bg.png \
	bright_hscroll_handle_dn.png \
	bright_hscroll_handle_hi.png \
	bright_hscroll_handle_up.png \
	bright_hscroll_left_dn.png \
	bright_hscroll_left_hi.png \
	bright_hscroll_left_up.png \
	bright_hscroll_right_dn.png \
	bright_hscroll_right_hi.png \
	bright_hscroll_right_up.png \
	bright_pot_dn.png \
	bright_pot_hi.png \
	bright_pot_up.png \
	bright_vscroll_handle_bg.png \
	bright_vscroll_handle_dn.png \
	bright_vscroll_handle_hi.png \
	bright_vscroll_handle_up.png \
	bright_vscroll_left_dn.png \
	bright_vscroll_left_hi.png \
	bright_vscroll_left_up.png \
	bright_vscroll_right_dn.png \
	bright_vscroll_right_hi.png \
	bright_vscroll_right_up.png \
	camerakeyframe.png \
	camera.png \
	cancel.png \
	cbuttons_left.png \
	cbuttons_right.png \
	center_justify.png \
	channel.png \
	channel_position.png \
	clearinpoint.png \
	clearoutpoint.png \
	clip_icon.png \
	closetip.png \
	cmeter_bg.png \
	color3way_dn.png \
	color3way_hi.png \
	color3way_point.png \
	color3way_up.png \
	column_dn.png \
	column_hi.png \
	column_up.png \
	configure.png \
	copy.png \
	cpanel_bg.png \
	cpanel_checkedhi.png \
	cpanel_checked.png \
	cpanel_dn.png \
	cpanel_hi.png \
	cpanel_up.png \
	crop.png \
	cut.png \
	cwindow_active.png \
	cwindow_inactive.png \
	delete.png \
	drawpatch.png \
	duplex.png \
	editpanel_checkedhi.png \
	editpanel_checked.png \
	editpanel_dn.png \
	editpanel_hi.png \
	editpanel_up.png \
	end.png \
	expandpatch_checkedhi.png \
	expandpatch_checked.png \
	expandpatch_dn.png \
	expandpatch_hi.png \
	expandpatch.png \
	expandpatch_up.png \
	eyedrop.png \
	fastfwd.png \
	fastrev.png \
	filebox_bigbutton_dn.png \
	filebox_bigbutton_hi.png \
	filebox_bigbutton_up.png \
	fileboxbutton_dn.png \
	fileboxbutton_hi.png \
	fileboxbutton_up.png \
	fitautos.png \
	fit.png \
	folder.png \
	framefwd.png \
	framerev.png \
	gangpatch.png \
	generic_dn.png \
	generic_hi.png \
	generickeyframe.png \
	generic_up.png \
	heroine_icon.png \
	histogram_carrot_checkedhi.png \
	histogram_carrot_checked.png \
	histogram_carrot_dn.png \
	histogram_carrot_hi.png \
	histogram_carrot_up.png \
	histogram.png \
	histogram_rgb.png \
	hslider_bg_dn.png \
	hslider_bg_hi.png \
	hslider_bg_up.png \
	hslider_fg_dn.png \
	hslider_fg_hi.png \
	hslider_fg_up.png \
	ibeam.png \
	icons.png \
	in_checkedhi.png \
	in_checked.png \
	in_dn.png \
	in_hi.png \
	inpoint.png \
	in_up.png \
	keyframe2.png \
	keyframe3.png \
	keyframe.png \
	label_checkedhi.png \
	label_checked.png \
	label.png \
	labeltoggle_dn.png \
	labeltoggle_uphi.png \
	labeltoggle_up.png \
	left_justify.png \
	listbox_button.png \
	listbox_dn.png \
	listbox_up.png \
	loadmode_cat.png \
	loadmode_checkedhi.png \
	loadmode_checked.png \
	loadmode_dn.png \
	loadmode_hi.png \
	loadmode_nested.png \
	loadmode_newcat.png \
	loadmode_new.png \
	loadmode_newtracks.png \
	loadmode_none.png \
	loadmode_paste.png \
	loadmode_resource.png \
	loadmode_up.png \
	magnify.png \
	maskkeyframe.png \
	mask.png \
	mbutton_bg.png \
	mbutton_left.png \
	mbutton_right.png \
	mclock_flat.png \
	mclock.png \
	menubar_bg.png \
	menubar_dn.png \
	menubar_hi.png \
	menubar_up.png \
	menuitem_dn.png \
	menuitem_hi.png \
	menuitem_up.png \
	menu_popup_bg.png \
	menupopup_dn.png \
	menupopup_hi.png \
	menupopup_up.png \
	menutitle_dn.png \
	menutitle_hi.png \
	menutitle_up.png \
	middle_justify.png \
	mode_add.png \
	mode_divide.png \
	mode_dn.png \
	mode_hi.png \
	modekeyframe.png \
	mode_max.png \
	mode_min.png \
	mode_multiply.png \
	mode_normal.png \
	mode_replace.png \
	mode_subtract.png \
	mode_up.png \
	mscroll_filler.png \
	mtimebar.png \
	mutepatch_checkedhi.png \
	mutepatch_checked.png \
	mutepatch_dn.png \
	mutepatch_hi.png \
	mutepatch.png \
	mutepatch_up.png \
	new_bg.png \
	new_bigbutton_dn.png \
	new_bigbutton_hi.png \
	new_bigbutton_up.png \
	nextedit.png \
	nextlabel.png \
	nexttip.png \
	ok.png \
	openfolder.png \
	out_checkedhi.png \
	out_checked.png \
	out_dn.png \
	out_hi.png \
	outpoint.png \
	out_up.png \
	over.png \
	overwrite.png \
	pan_channel.png \
	pan_channel_small.png \
	panel_divider.png \
	pan_hi.png \
	pankeyframe.png \
	pan_popup.png \
	pan_stick.png \
	pan_stick_small.png \
	pan_up.png \
	paste.png \
	patchbay_bg.png \
	patch_checkedhi.png \
	patch_checked.png \
	patch_dn.png \
	patch_hi.png \
	patch_up.png \
	pause.png \
	picture.png \
	playpatch.png \
	play.png \
	plugin_bg.png \
	plugin_ondn.png \
	plugin_onhi.png \
	plugin_on.png \
	plugin_onselecthi.png \
	plugin_onselect.png \
	plugin_showdn.png \
	plugin_showhi.png \
	plugin_show.png \
	plugin_showselecthi.png \
	plugin_showselect.png \
	preferences_bg.png \
	preferencesbutton_dnhi.png \
	preferencesbutton_dnlo.png \
	preferencesbutton_dn.png \
	preferencesbutton_uphi.png \
	preferencesbutton_up.png \
	prevedit.png \
	prevlabel.png \
	prevtip.png \
	progress_bg.png \
	progress_hi.png \
	projectorkeyframe.png \
	projector.png \
	protect.png \
	radial_checkedhi.png \
	radial_checked.png \
	radial_dn.png \
	radial_hi.png \
	radial_up.png \
	recordpatch.png \
	record.png \
	redo.png \
	reload.png \
	rename.png \
	resource1024.png \
	resource128.png \
	resource256.png \
	resource32.png \
	resource512.png \
	resource64.png \
	reverse.png \
	rewind.png \
	right_justify.png \
	ruler.png \
	scope.png \
	setformat_bg.png \
	show_meters.png \
	singleframe.png \
	splice.png \
	statusbar_cancel_dn.png \
	statusbar_cancel_hi.png \
	statusbar_cancel.png \
	statusbar_cancel_up.png \
	statusbar.png \
	stop.png \
	swap_extents.png \
	text_highlight.png \
	text.png \
	timebar_bg_flat.png \
	timebar_bg.png \
	timebar_brender.png \
	timebar_view.png \
	tipbutton_dn.png \
	tipbutton_hi.png \
	tipbutton_up.png \
	title_bg.png \
	titlesafe.png \
	toclip.png \
	toolwindow.png \
	top_justify.png \
	transportdn.png \
	transportend.png \
	transporthi.png \
	transportup.png \
	tumble_bottom.png \
	tumble_hi.png \
	tumble_top.png \
	tumble_up.png \
	undo.png \
	updir.png \
	vbuttons_left.png \
	vclock.png \
	veffect_icon.png \
	vtransition_icon.png \
	vwindow_timebar.png \
	waveform.png \
	waveform_rgb.png \
	wrench.png \
	xmeter_green.png \
	xmeter_normal.png \
	xmeter_over.png \
	xmeter_red.png \
	xmeter_white.png \
	xmeter_yellow.png \
	ymeter_green.png \
	ymeter_normal.png \
	ymeter_over.png \
	ymeter_red.png \
	ymeter_white.png \
	ymeter_yellow.png \
	zoompopup_dn.png \
	zoompopup_hi.png \
	zoompopup_up.png \
	zoomtumble_bottom.png \
	zoomtumble_hi.png \
	zoomtumble_top.png \
	zoomtumble_up.png

EXTRA_DIST = \
	$(PNGS) \
	buttonbar.xcf.bz2 \
	editpanel.xcf.bz2 \
	filebox.xcf.bz2 \
	mainwindow.xcf.bz2 \
	menu.xcf.bz2 \
	new.xcf.bz2 \
	patches.xcf.bz2 \
	plugin.xcf.bz2 \
	pot.xcf.bz2 \
	radial.xcf.bz2 \
	zoomtumble.xcf.bz2
