## $Id: Makefile.am,v 1.1.1.1 2002/06/21 12:35:24 myrina Exp $

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = BladeMP3EncDLL.c \
	BladeMP3EncDLL.def \
	BladeMP3EncDLL.h \
	Example.cpp \
	Example.dsp \
	Example.dsw \
	LameDLLInterface.htm \
	LameDll_vc6.dsp \
	MP3EncDll.dsp \
	MP3EncDll.dsw \
	MP3export.pas
