## $Id: Makefile.am,v 1.1.1.1 2002/06/21 12:35:24 myrina Exp $

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	Encoder.cpp \
	Encoder.h \
	Mpegac.cpp \
	Mpegac.def \
	Mpegac.h \
	PropPage.cpp \
	PropPage.h \
	PropPage_adv.cpp \
	PropPage_adv.h \
	Property.rc \
	README \
	REG.CPP \
	REG.H \
	UIDS.H \
	aboutprp.cpp \
	aboutprp.h \
	dshow.dsp \
	dshow.dsw \
	elogo.ico \
	iaudioprops.h \
	resource.h

