## $Id: Makefile.am,v 1.1 2003/07/29 04:17:51 heroine Exp $

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	Encoder.cpp \
	Encoder.h \
	Mpegac.cpp \
	Mpegac.def \
	Mpegac.h \
	PropPage.cpp \
	PropPage.h \
	PropPage_adv.cpp \
	PropPage_adv.h \
	Property.rc \
	README \
	REG.CPP \
	REG.H \
	UIDS.H \
	aboutprp.cpp \
	aboutprp.h \
	dshow.dsp \
	dshow.dsw \
	elogo.ico \
	iaudioprops.h \
	resource.h

