## $Id: Makefile.am,v 1.1.1.1 2002/06/21 12:35:24 myrina Exp $

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	Makefile.tinyxml \
	changes.txt \
	dox \
	makedistlinux \
	makedistwin.bat \
	readme.txt \
	test.dsp \
	test.dsw \
	tinyxml.cpp \
	tinyxml.dsp \
	tinyxml.h \
	tinyxmlerror.cpp \
	tinyxmlparser.cpp \
	xmltest.cpp
