## $Id: Makefile.am,v 1.1 2003/07/29 04:17:51 heroine Exp $

include $(top_srcdir)/Makefile.am.global

EXTRA_DIST = \
	Makefile.tinyxml \
	changes.txt \
	dox \
	makedistlinux \
	makedistwin.bat \
	readme.txt \
	test.dsp \
	test.dsw \
	tinyxml.cpp \
	tinyxml.dsp \
	tinyxml.h \
	tinyxmlerror.cpp \
	tinyxmlparser.cpp \
	xmltest.cpp
